# LexicalAnalysisGenerator

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
code/compiler_lab_2/: .qmake.stash  main.cpp  ui_widget.h  widget.cpp  widget.h  widget.ui
docs/: 20203231004 李达良 实验二.docx
src/: main.cpp
test/: 20203231004 李达良 实验二测试报告.docx  中括号测试.txt  实验二 测试报告.md  括号测试、连接符测试.txt  综合测试样例1.txt  综合测试样例2.txt  综合测试样例3.txt  题目样例测试.txt
